setup/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]

# accept loopback
-A INPUT -i lo -j ACCEPT

# accept responses
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# accept incoming ssh
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT

# accept ICMP echo
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# default docker rules
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
COMMIT
